--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- A div that contains a group of items for week 1. Can be useful for setting background colours etc.  -->
     <div class="myWeek1">
-        <h1>Data Science for Economists: Thea Gegeshidze</h1>
+        <h1>Data Science for Economists.</h1>
         
         <h3>Covid-19</h3>
         <p>The first chart tracks Covid-19 cases by UK region.</p>
@@ -40,8 +40,8 @@
 
 <script>
     //Define charts:
-    var myChart1 = "chart1_covidUKRegions.json";
-    var myChart2 = "chart2_ukProductivity.json";
+    var myChart1 = "chart1_co2emissionsfood.json";
+    var myChart2 = "chart2_co2emissionscountry.json";
 
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
