--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="myWeek1">
         <h1>Data Science for Economists.</h1>
         
-        <h3>Covid-19</h3>
-        <p>The first chart tracks Covid-19 cases by UK region.</p>
+        <h3>Would a vegan diet reduce carbon emissions enough to reduce climate change?</h3>
+        <p>The first chart tracks Carbon emissions by UK sector.</p>
         <div class="chart" id="Chart1"></div>
 
-        <h3>Productivity puzzle</h3>
-        <p>My second chart looks at productivity in the UK</p>
+        <h3>Plant-based or plant-biased?</h3>
+        <p>My second chart looks at carbon emissions throughout other countries globally.</p>
         <div class="chart" id="Chart2"> </div>
     </div> 
 </body>
