--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <div class="myWeek1">
         <h1>Data Science for Economists.</h1>
         
+        <a href="project.html">Project</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="aboutme.html">About Me!</a>
+        <a href="CV">CV</a>
+        
         <h3>Would a vegan diet reduce carbon emissions enough to reduce climate change?</h3>
         <p>The first chart tracks Carbon emissions by UK sector.</p>
         <div class="chart" id="Chart1"></div>
