--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="myWeek1">
         <h1>Data Science for Economists.</h1>
         
-   <div class="topnav">     
+   <div class="topnav">
+        <a class="active" href="#home">Home</a>
         <a href="project.html">Project</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="aboutme.html">About Me!</a>
