--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- A div that contains a group of items for week 1. Can be useful for setting background colours etc.  -->
     <div class="myWeek1">
-        <h1>Data Science for Economists.</h1>
+        <h1>The Cost of Living Crisis and Net-Zero</h1>
         
    <div class="topnav">
         <a href="project.html">Project</a>
@@ -34,11 +34,11 @@
         <a href="CV">CV</a>
   </div>
         
-        <h3>Would a vegan diet reduce carbon emissions enough to reduce climate change?</h3>
+        <h3>How has the cost of living crisis impacted the UK's net zero goals?</h3>
         <p>The first chart tracks Carbon emissions by UK sector.</p>
         <div class="chart" id="Chart1"></div>
 
-        <h3>Plant-based or plant-biased?</h3>
+        <h3>Should our response be carbon zero-aligned?</h3>
         <p>My second chart looks at carbon emissions throughout other countries globally.</p>
         <div class="chart" id="Chart2"> </div>
     </div> 
