--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
 </head>
 
-
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  
+  body {
+    margin: 0;
+    text-align: center !important;
+  }
+  
+  </style>
 
 <body>
     <!-- A div that contains a group of items for week 1. Can be useful for setting background colours etc.  -->
