--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 <body>
     <!-- A div that contains a group of items for week 1. Can be useful for setting background colours etc.  -->
     <div class="myWeek1">
-        <h1>The Cost of Living Crisis and Net-Zero</h1>
+        <h1>Data Science</h1>
         
    <div class="topnav">
+        <a href="home.html">Home</a>
+        <a href="aboutme.html">About me!</a>
         <a href="project.html">Project</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="aboutme.html">About Me!</a>    
+        <a href="github.html">Github</a>
   </div>
         
         <h3>How has the cost of living crisis impacted the UK's net zero goals?</h3>
