--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
 
 <!-- This line will change the appearance of the page-->
-<link href="stylesheet.css" rel="stylesheet">
+<link href="portfolio.css" rel="stylesheet">
 
 <!-- This line will change the font of the page -->
 <style>
