--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,14 @@
     <div class="header">
         <h2><span style="color:seagreen">Data</span><span style="color:rgb(38, 52, 9)">Science</span></h2>
     </div>
+          
+    <div class="topnav">
+        <a href="home.html">Home</a>
+        <a href="aboutme.html">About me!</a>
+        <a href="project.html">Project</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="github.html">Github</a>
 
-    <div class="containerHomeScreen">
-        <button class="button4" onclick="window.location.href = 'index'">Home</button>
-        <button class="button4" onclick="window.location.href = 'project'">Project</button>
-        <button class="button5" onclick="location.href = 'https://github.com/theagegeshidze/theagegeshidze.github.io'">GitHub</button>
-    </div>
-    
     <!-- This task involved embedding three charts onto my webpage, two of which were given in class,
     the third was taken from the rapidcharts.io repository-->    
     <div class="containertext">
