--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@ body {
 
   <h1>Data<span style="color:purple">Science</span></h1></span>
 
-  <h2><b>by Nataly Tsangarides</b> </h2>
+  <h2><b> Thea Gegeshidze </b> </h2>
 
   <p>
     <a class="button" href="index.html"><i class="fas fa-home faa-home animated-hover fa-4x" style="font-size: 1em;"></i> Home</a>  
