--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,11 @@ body {
   <h2><b> Thea Gegeshidze </b> </h2>
 
   <p>
-    <a class="button" href="index.html"><i class="fas fa-home faa-home animated-hover fa-4x" style="font-size: 1em;"></i> Home</a>  
-    <a class="buttonActive" href="portfolio.html"><i class="fas fa-chart-bar"></i> Portfolio</a>
-    <a class="button" href="project.html"><i class="fas fa-edit faa-edit animated-hover fa-4x" style="font-size: 1em;"></i> Project</a> 
-    <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><i class="fab fa-github faa-github animated-hover fa-4x" style="font-size: 1em;"></i> Github</a> 
-    <a class="button" href="https://rapidcharts.io/datascience"><i class="fas fa-book faa-book animated-hover fa-4x" style="font-size: 1em;"></i> Course</a>
+    <a class="button" href="index.html"><style="font-size: 1em;"></i> Home</a>  
+    <a class="buttonActive" href="portfolio.html"> Portfolio</a>
+    <a class="button" href="project.html"><style="font-size: 1em;"></i> Project</a> 
+    <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><style="font-size: 1em;"></i> Github</a> 
+    <a class="button" href="https://rapidcharts.io/datascience"><style="font-size: 1em;"></i> Course</a>
   </p>
 
 </container>
