--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 </head>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.google.com/specimen/Source+Sans+Pro');
 
 body {
   margin: 0;
