--- a/project.html
+++ b/project.html
@@ -96,7 +96,7 @@ body {
   <container class="hcontainer">
 
 
-  <p class="bodyText"><span style="color: rgb(49, 6, 40); font-weight: 700; font-size:25px;">Week 1: Embedding</p>
+  <p class="bodyText"><span style="color: rgb(49, 6, 40); font-weight: 700; font-size:25px;">PROJECT</p>
 
   <h3>C02 Emissions: Food</h3>
 
