--- a/project.html
+++ b/project.html
@@ -82,7 +82,7 @@ body {
 
   <p>
     <a class="button" href="index.html"><style="font-size: 1em;"></i> Home</a>  
-    <a class="button" href="project.html"><style="font-size: 1em;"></i> Project</a> 
+    <a class="button" href="portfolio.html"><style="font-size: 1em;"></i> Portfolio</a> 
     <a class="buttonActive" href="project.html"> Project</a>
     <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><style="font-size: 1em;"></i> Github</a> 
     <a class="button" href="https://rapidcharts.io/datascience"><style="font-size: 1em;"></i> Course</a>
