--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@ body {
 
     <container class="hcontainer">
 
-  <h1>Data<span style="color:purple">Science</span></h1></span>
+  <h1>Data<span style="color:green">Science</span></h1></span>
 
   <h2><b> Thea Gegeshidze </b> </h2>
 
@@ -96,7 +96,7 @@ body {
   <container class="hcontainer">
 
 
-  <p class="bodyText"><span style="color: rgb(49, 6, 40); font-weight: 700; font-size:25px;">Week 1: Embedding</p>
+  <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 1: Embedding</p>
 
   <h3>C02 Emissions: Food</h3>
 
