--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <style>
-@import url('https://fonts.google.com/specimen/Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 body {
   margin: 0;
@@ -74,7 +74,7 @@ body {
 
     <container class="hcontainer">
 
-  <h1>Data<span style="color:purple">Science</span></h1></span>
+  <h1>Data<span style="color:green">Science</span></h1></span>
 
   <h2><b> Thea Gegeshidze </b> </h2>
 
