--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ body {
 </head>
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-  
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap')
   body {
     margin: 0;
     text-align: center !important;
