--- a/project.html
+++ b/project.html
@@ -76,7 +76,7 @@ body {
 
     <container class="hcontainer">
 
-  <h1>Data<span style="color:purple">Science</span></h1></span>
+  <h1>Data<span style="color:green">Science</span></h1></span>
 
   <h2><b> Thea Gegeshidze </b> </h2>
 
