--- a/portfolio.html
+++ b/portfolio.html
@@ -96,9 +96,12 @@ body {
   <container class="hcontainer">
 
 
-  <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 1: Embedding</p>
-
+  <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 1: Setting up web page and embedding two charts</p>
+   
   <h3>C02 Emissions: Food</h3>
+  <p> TasK: Set up your GitHub repository and design your first home page using the index.html file we provided.
+  Replace the two charts with two more from the rapidcharts repository, and change the titles and
+  descriptions of the charts. </p>
 
   <p>The chart tracks carbon dioxide emissions by food.</p>
 
