--- a/portfolio.html
+++ b/portfolio.html
@@ -103,19 +103,18 @@ body {
   Replace the two charts with two more from the rapidcharts repository, and change the titles and
   descriptions of the charts. </p>
 
-  <p>The chart tracks carbon dioxide emissions by food.</p>
-
 <!--CHART 1-->
 <div class="chart" id="Chart1">
 <script>
   var myChart1 = "chart1_co2emissionsfood.json";
   vegaEmbed('#Chart1', myChart1);
 </script>
-</div>
 
+  <p>The chart above tracks carbon dioxide emissions by food on a global scale.</p>
+</div>
 <h3>C02 Emissions by country</h3>
 
-   <p>The chart tracks carbon dioxide emissions by country.</p>
+   
 
 <!--CHART 2 -->
 <div class="chart" id="Chart2">
@@ -124,7 +123,7 @@ body {
   vegaEmbed('#Chart2', myChart2);
 </script>
 </div>
- 
+ <p>The chart above tracks carbon dioxide emissions by country.</p>
 </body>
 </div>
 
