--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@ body {
   var myChart1 = "chart1_co2emissionsfood.json";
   vegaEmbed('#Chart1', myChart1);
 </script>
-
+<div>
   <p>The chart above tracks carbon dioxide emissions by food on a global scale.</p>
 </div>
 <h3>C02 Emissions by country</h3>
