--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,7 @@ body {
 </script>
 <div>
   <p>The chart above tracks carbon dioxide emissions by food on a global scale.</p>
+</body>
 </div>
 <h3>C02 Emissions by country</h3>
 
