--- a/portfolio.html
+++ b/portfolio.html
@@ -110,9 +110,8 @@ body {
   var myChart1 = "chart1_co2emissionsfood.json";
   vegaEmbed('#Chart1', myChart1);
 </script>
-<div>
+</div>
   <p>The chart above tracks carbon dioxide emissions by food on a global scale.</p>
-</body>
 </div>
 <h3>C02 Emissions by country</h3>
 
