--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@ body {
   <container class="hcontainer">
 
 
-  <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 1: Setting up web page and embedding two charts</p>
+  <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 1: Embedding</p>
   <p> TasK: Set up your GitHub repository and design your first home page using the index.html file we provided.
   Replace the two charts with two more from the rapidcharts repository, and change the titles and
   descriptions of the charts. </p>
@@ -127,7 +127,7 @@ body {
  <p>The chart above tracks carbon dioxide emissions by country.</p>
  </div>
      
-<p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 2: Two Charts: using inline data </p>
+<p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 2: Inline data </p>
   <p> Clearly label your portfolio page so that we can see Week 2. Now add two charts:
 1. A chart of IMF lending outstanding, hosted on your GitHub account. The data can be found
 here and here
@@ -148,7 +148,7 @@ minimum 3 dimensions.
 3. Comment (not more than 25 words) what is the difference in the second visual encoding and
 especially why did you choose it.</p>
         
-<p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 4: Data Scraper </p>
+<p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 4: Data Scrapers </p>
   <p> This week we have discussed the simple ways of scraping data from websites. Using a Google Colab
 python notebook, scrape a website through one of the presented methods in class (pandas read_html
 or beautifulsoup). Then clean and normalise the data and export into TIDY (long form) format.
