--- a/portfolio.html
+++ b/portfolio.html
@@ -150,8 +150,7 @@ especially why did you choose it.</p>
         
 <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 4: Data Scrapers </p>
   <p> This week we have discussed the simple ways of scraping data from websites. Using a Google Colab
-python notebook, scrape a website through one of the presented methods in class (pandas read_html
-or beautifulsoup). Then clean and normalise the data and export into TIDY (long form) format.
+python notebook, scrape a website through one of the presented methods in class. Then clean and normalise the data and export into TIDY format.
 1. A link to the Google Collab python notebook where you conducted your data analysis (make
 sure you make it publicly accessible!)
 2. A chart built with the data from the previous point. It is up to you what how do you reference
@@ -160,21 +159,8 @@ and include the data in the Vega-lite chart specification.
         
 <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 5: API </p>
   <p> Use the ONS API to batch download nine different series as JSON files. Save these to your GitHub
-account, and use these (as “raw” files) to supply the data to nine (or more) charts on a theme or
-themes of your choice. Homework notes:
-• We have discussed the ONS API in class. The generic form is:
-o https://api.ons.gov.uk/timeseries/{SERIES_ID}/dataset/{DATASET_ID}/data
-o You need to provide the series and data IDs, looping over one of these.
-• A working example is:
-o https://api.ons.gov.uk/timeseries/cpoa/dataset/pusf/data
-• We have discussed using loops to batch download from APIs, using FRED. Apply these skills
-to the ONS API.
-• Charts should be time series, and use the time series API above.
-• You can cover any topic, or topics of your choice.
-• Given that you are making 9 very similar charts, they should be smaller than the normal chart
-size you are using on your page.
-• Ensure you add a link to the Google Collab python notebook where you conducted your data
-analysis (make sure you make it publicly accessible!)</p>
+account, and use these to supply the data to nine charts on a theme or
+themes of your choice.)</p>
 
 </body>
 </html>
