--- a/portfolio.html
+++ b/portfolio.html
@@ -148,6 +148,14 @@ minimum 3 dimensions.
 3. Comment (not more than 25 words) what is the difference in the second visual encoding and
 especially why did you choose it.</p>
         
+<!--CHART 3-->
+<div class="chart" id="Chart3">
+<script>
+  var myChart3 = "SurfersAgainstSewage.json";
+  vegaEmbed('#Chart3', myChart3);
+</script>
+</div>
+        
 <p class="bodyText"><span style="color: rgb(6, 35, 49); font-weight: 700; font-size:25px;">Week 4: Data Scrapers </p>
   <p> This week we have discussed the simple ways of scraping data from websites. Using a Google Colab
 python notebook, scrape a website through one of the presented methods in class. Then clean and normalise the data and export into TIDY format.
