--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,19 @@ minimum 3 dimensions.
 2. A modified chart from the previous point, using a different visual encoding.
 3. Comment (not more than 25 words) what is the difference in the second visual encoding and
 especially why did you choose it.</p>
+        <p>
+        <h3>IMF Lending - Outstanding</h3>
+        <p>Credit Outstanding to all members, 1984-2022 - uncorrected chart</p>
+        <div class="chart" id="chart3"></div>
+
+        <h3>IMF Lending - Percentage of Global GDP</h3>
+        <p>Credit Outstanding to all members, 1984-2021 - corrected chart</p>
+        <div class="chart" id="chart4"></div>
+
+        <h3>Analysis</h3>
+        <p>1984 would have been the most risky year due to the fact that IMF lending represented
+            the highest proportion of global GDP during this period.
+        </p>
         
 <!--CHART 3-->
 <div class="chart" id="Chart3">
