--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,7 @@ especially why did you choose it.</p>
 <!--CHART 3-->
 <div class="chart" id="Chart3">
 <script>
-  var myChart3 = "IMF.json";
+  var myChart3 = "chart3_IMF.json";
   vegaEmbed('#Chart3', myChart3);
 </script>
         
