--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@ body {
     //Define charts:
     var myChart1 = "chart1_co2emissionsfood.json";
     var myChart2 = "chart2_ukProductivity.json";
-    var myChart3 = "IMF.json";
+    var myChart3 = "chart3_IMF.json";
     var myChart4 = "IMF2.json";
     var myChart5 = "GDP.json";
     var myChart6 = "GDP2.json";
