--- a/portfolio.html
+++ b/portfolio.html
@@ -168,7 +168,7 @@ body {
     var myChart1 = "chart1_co2emissionsfood.json";
     var myChart2 = "chart2_ukProductivity.json";
     var myChart3 = "chart3_IMF.json";
-    var myChart4 = "IMF2.json";
+    var myChart4 = "chart4_IMF2.json";
     var myChart5 = "GDP.json";
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
