--- a/portfolio.html
+++ b/portfolio.html
@@ -98,11 +98,11 @@ body {
   <div class="myWeek1">
         <h1> Week 1: Embedding </h1>
         
-        <h3>CO2 Emissions: Food</h3>
+        <h3>CO2 Emissions:Food</h3>
         <p>A chart tracking carbon dioxide emissions by food on a global scale.</p>
         <div class="chart" id="chart1"></div>
 
-        <h3>CO2 EMissions: Productivity</h3>
+        <h3>CO2 Emissions: Productivity</h3>
         <p>A chart tracking carbon dioxide emissions by productivity on a global scale.</p>
         <div class="chart" id="chart2"> </div>
 
