--- a/portfolio.html
+++ b/portfolio.html
@@ -126,10 +126,10 @@ body {
     </div> 
     
     <div class="myWeek3">
-        <h1>Gross Domestic Product - Week 3</h1>
+        <h1> Inline Data Graphs - Week 3</h1>
         
         <h3>GDP</h3>
-        <p>The growth rate of UK and France GDP, 1960 - 2021 (% annual)</p>
+        <p>The growth rate of the big 4 countries (% annual)</p>
         <div class="chart" id="chart5"></div>
 
         <h3>GDP</h3>
@@ -169,7 +169,7 @@ body {
     var myChart2 = "chart2_ukProductivity.json";
     var myChart3 = "chart3_IMF.json";
     var myChart4 = "chart4_IMF2.json";
-    var myChart5 = "GDP.json";
+    var myChart5 = "chartweek3.json";
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
     var myChart8 = "Tax_total.json";
