--- a/portfolio.html
+++ b/portfolio.html
@@ -174,15 +174,15 @@ body {
     var myChart5 = "chartweek3.json";
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
-    var myChart8 = "Tax_total.json";
-    var myChart9 = "Tax_VAT.json";
-    var myChart10 = "Tax_Alcohol.json";
-    var myChart11 = "Tax_Tobacco.json";
-    var myChart12 = "Tax_Fuel.json";
-    var myChart13 = "Tax_Business.json";
-    var myChart14 = "Tax_StampDuty(shares).json";
-    var myChart15 = "Tax_StampDuty(land).json";
-    var myChart16 = "Tax_Vehicle.json";
+    var myChart8 = "data_ONS-BKST.json";
+    var myChart9 = "data_ONS-CUDG.json";
+    var myChart10 = "data_ONS-CUKY.json";
+    var myChart11 = "data_ONS-EKED.json";
+    var myChart12 = "data_ONS-GTAO.json";
+    var myChart13 = "data_ONS-MF6V.json";
+    var myChart14 = "data_ONS-MM9F.json";
+    var myChart15 = "data_ONS-NMBY.json";
+    var myChart16 = "data_ONS-NZGF.json";
     
     // Embed charts:
     vegaEmbed('#chart1', myChart1);
