--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@ body {
     var myChart5 = "chartweek3.json";
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
-    var myChart8 = "data_ONS-BKST.json";
+    var myChart8 = "BKST.json";
     var myChart9 = "data_ONS-CUDG.json";
     var myChart10 = "data_ONS-CUKY.json";
     var myChart11 = "data_ONS-EKED.json";
