--- a/portfolio.html
+++ b/portfolio.html
@@ -39,14 +39,6 @@ body {
   <div id="two"></div>
 </div>
 
-<div id="loadermessage">Loading...</div>
-
-</head>
-
-<body onload="myFunction()" style="margin:0;">
-
-<div id="loader"></div>
-
 <div style="display:none;" id="myDiv" class="animate-bottom">
 
   <script>
@@ -76,17 +68,7 @@ body {
 
     <container class="hcontainer">
 
-  <h1>Data<span style="color:green">Science</span></h1></span>
-
-  <h2><b> Thea Gegeshidze </b> </h2>
-
-  <p>
-    <a class="button" href="index.html"><style="font-size: 1em;"></i> Home</a>  
-    <a class="buttonActive" href="portfolio.html"> Portfolio</a>
-    <a class="button" href="project.html"><style="font-size: 1em;"></i> Project</a> 
-    <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><style="font-size: 1em;"></i> Github</a> 
-    <a class="button" href="https://rapidcharts.io/datascience"><style="font-size: 1em;"></i> Course</a>
-  </p>
+  <h1>Data<span style="color:green">Science : Thea Gegeshidze</span></h1></span>
 
 </container>
 </header>
