--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thea Gegeshidze</title>
 
-    <link rel="stylesheet" href= "portfolio.css">
+    <link rel="stylesheet" href= "project.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     
@@ -24,33 +24,9 @@
 
 </head>
 
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
-body {
-  margin: 0;
-  text-align: center !important;
-}
-
-</style>
-
-<div id="loader">
-  <div id="one"></div>
-  <div id="two"></div>
-</div>
-    
-    <div id="loadermessage">Loading...</div>
-
-</head>
-
-<body onload="myFunction()" style="margin:0;">
-
-<div id="loader"></div>
-
-<div style="display:none;" id="myDiv" class="animate-bottom">
-
-  <script>
-
+ <header>
+ 
+  <container>
 
     <container class="hcontainer">
 
@@ -60,15 +36,21 @@ body {
 
   <p>
     <a class="button" href="index.html"><style="font-size: 1em;"></i> Home</a>  
-    <a class="buttonActive" href="portfolio.html"> Portfolio</a>
-    <a class="button" href="project.html"><style="font-size: 1em;"></i> Project</a> 
+    <a class="button" href="portfolio.html"><style="font-size: 1em;"></i> Portfolio</a> 
+    <a class="buttonActive" href="project.html"> Project</a>
     <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><style="font-size: 1em;"></i> Github</a> 
     <a class="button" href="https://rapidcharts.io/datascience"><style="font-size: 1em;"></i> Course</a>
   </p>
 
-    </script>
+</container>
+</header>
+
+<container>
+
+  <container class="hcontainer">
 
 
+  <p class="bodyText"><span style="color: rgb(49, 6, 40); font-weight: 700; font-size:25px;">PORTFOLIO</p>
 
 <body>
  
