--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,9 @@
 
   <container class="hcontainer">
 
-
+<div>
   <p class="bodyText"><span style="color: rgb(49, 6, 40); font-weight: 700; font-size:25px;">PORTFOLIO</p>
+        </div>
 
 <body>
  
