--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
     var myChart8 = "BKST.json";
-    var myChart9 = "data_ONS-CUDG.json";
+    var myChart9 = "CUDG.json";
     var myChart10 = "data_ONS-CUKY.json";
     var myChart11 = "data_ONS-EKED.json";
     var myChart12 = "data_ONS-GTAO.json";
