--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
     var myChart7 = "Transfers.json";
     var myChart8 = "BKST.json";
     var myChart9 = "CUDG.json";
-    var myChart10 = "data_ONS-CUKY.json";
+    var myChart10 = "CUKY.json";
     var myChart11 = "data_ONS-EKED.json";
     var myChart12 = "data_ONS-GTAO.json";
     var myChart13 = "data_ONS-MF6V.json";
