--- a/portfolio.html
+++ b/portfolio.html
@@ -121,12 +121,12 @@
     var myChart8 = "BKST.json";
     var myChart9 = "CUDG.json";
     var myChart10 = "CUKY.json";
-    var myChart11 = "data_ONS-EKED.json";
-    var myChart12 = "data_ONS-GTAO.json";
-    var myChart13 = "data_ONS-MF6V.json";
-    var myChart14 = "data_ONS-MM9F.json";
-    var myChart15 = "data_ONS-NMBY.json";
-    var myChart16 = "data_ONS-NZGF.json";
+    var myChart11 = "EKED.json";
+    var myChart12 = "GTAO.json";
+    var myChart13 = "MF6V.json";
+    var myChart14 = "MM9F.json";
+    var myChart15 = "NMBY.json";
+    var myChart16 = "NZGF.json";
     
     // Embed charts:
     vegaEmbed('#chart1', myChart1);
