--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,8 @@
         <div class="chart" id="chart11"></div><div class="chart" id="chart12"></div><div class="chart" id="chart13"></div>
         <div class="chart" id="chart14"></div><div class="chart" id="chart15"></div><div class="chart" id="chart16"></div>
     </div> 
-        
+        <p> Here is the link to the Google colab python notebook where the data analysis was conducted. </p>
+        <a href "https://colab.research.google.com/github/theagegeshidze/theagegeshidze.github.io/blob/main/week5.ipynb"> Google Colab </a>
 </body>
         
 <script>
