--- a/project.html
+++ b/project.html
@@ -54,10 +54,14 @@
         
         <p>
         Aim:
-         - Statistic about the state of the environment
-         - Info about fossil fuels and how harmful they are for the environment/ how dependent we are on them
-         - What sources do we have available?
-         - Tend to be two camps; championing nuclear power or renewables; both have arguments but which one is most compelling?</p>
+        Climate change is one of the most pressing challenges facing our world today, and finding ways to reduce
+        our carbon emissions and protect the planet for future generations is more important than ever. One potential
+        solution that has been proposed is the use of nuclear power as a low-carbon source of electricity. However, 
+        the role of nuclear power in the fight against climate change is a topic of ongoing debate, with both supporters
+        and critics raising valid points. Climate activists tend to agree that renewables will play an important role, but
+        the role of nuclear power remains contentious. By comparing the relative; safety, capacity, inertia, cost, 
+        stability and possibility of the two options, we aim to explore whether there is space for nuclear power in our 
+        fight against the climate crisis. </p>
         <div class="chart" id="chart1"></div>
 
     </div>
