--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
     var myChart14 = "MM9F.json";
     var myChart15 = "NMBY.json";
     var myChart16 = "NZGF.json";
-    var myChart17 = "GTAO.json";
+    var myChart17 = "mapoffrance.geojson";
     var myChart18 = "MF6V.json";
     var myChart19 = "MM9F.json";
     var myChart20 = "NMBY.json";
