--- a/portfolio.html
+++ b/portfolio.html
@@ -111,10 +111,8 @@
         
         <div class="myWeek7">
         <h3> Week 7 – Two maps: a base map and a choropleth </h3>
-        
-        <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <div class="chart" id="chart17"> </div>
-
+        <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <p> hee are my mapsssss </p>
 
     </div> 
@@ -174,7 +172,7 @@
     var myChart15 = "NMBY.json";
     var myChart16 = "NZGF.json";
     var myChart17 = "mapoffrance.json";
-    var myChart18 = "MF6V.json";
+    var myChart18 = "visualization.vg.json";
     var myChart19 = "MM9F.json";
     var myChart20 = "NMBY.json";
     var myChart21 = "NZGF.json";
