--- a/portfolio.html
+++ b/portfolio.html
@@ -122,8 +122,10 @@
         <h3> Week 8- Festival of Economics </h3>
         
         <p> I went to thissssss talk and they said this.</p>
-        <div class="chart" id="chart11"></div>
-        <div class="chart" id="chart20"></div>
+        <div class = 'grid_items'>
+        <div class="grid_item" id="chart17"></div>
+        <div class="grid_item" id="chart18"></div>
+        </div>
 
         <p> hee are my grpahs and this is what they say </p>
 
