--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,9 @@
         
         <div class="myWeek7">
         <h3> Week 7 – Two maps: a base map and a choropleth </h3>
-        <div class="chart" id="chart17"> </div>
+        <div class = 'grid_items'>
+        <div class="grid_item" id="chart17"></div>
+        </div>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <p> hee are my mapsssss </p>
 
@@ -173,7 +175,7 @@
     var myChart14 = "MM9F.json";
     var myChart15 = "NMBY.json";
     var myChart16 = "NZGF.json";
-    var myChart17 = "mapoffrance.json";
+    var myChart17 = "visualization.vg.json";
     var myChart18 = "visualization.vg.json";
     var myChart19 = "MM9F.json";
     var myChart20 = "NMBY.json";
