--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
         <h3> Week 8- Festival of Economics </h3>
         <div class="chart" id="chart19"></div>
        <div class = 'grid_items'>
-        <div class="grid_item" NOT YET id="chart"></div>
+        <div class="grid_item" id="chart20"></div>
         
         <p> I went to thissssss talk and they said this.</p>
         
@@ -175,7 +175,7 @@
     var myChart17 = "visualization.vg.json";
     var myChart18 = "choroplethfixlegend.json";
     var myChart19 = "week10needshelp.json";
-    var myChart20 = "NMBY.json";
+    var myChart20 = "week8bneedshelp.json";
     var myChart21 = "NZGF.json";
     var myChart22 = "GTAO.json";
     var myChart23 = "MF6V.json";
