--- a/portfolio.html
+++ b/portfolio.html
@@ -176,7 +176,7 @@
     var myChart18 = "choroplethfixlegend.json";
     var myChart19 = "week10needshelp.json";
     var myChart20 = "week8bneedshelp.json";
-    var myChart21 = "NZGF.json";
+    var myChart21 = "FRANCECHNEEDSREGEX.json";
     var myChart22 = "GTAO.json";
     var myChart23 = "MF6V.json";
     var myChart24 = "MM9F.json";
