--- a/portfolio.html
+++ b/portfolio.html
@@ -125,6 +125,7 @@
         <div class="chart" id="chart19"></div>
        <div class = 'grid_items'>
         <div class="grid_item" id="chart20"></div>
+        <div class="grid_item" id="chart21"></div>
         
         <p> I went to thissssss talk and they said this.</p>
         
