--- a/project.html
+++ b/project.html
@@ -72,7 +72,8 @@
         
             <p>Global Carbon Emissions over time</p>
         <div class="chart" id="chart1"></div>
-        </p>
+        <div class="chart" id="chart2"></div>
+  
     </div> 
  
 </body>
@@ -81,7 +82,7 @@
 
     //Define charts:
     var myChart1 = "choroplethfixlegend.json";
-    var myChart2 = "chart2_ukProductivity.json";
+    var myChart2 = "cannualcarbonlinechart.json";
     var myChart3 = "chart3_IMF.json";
     var myChart4 = "chart4_IMF2.json";
     var myChart5 = "chartweek3.json";
