--- a/project.html
+++ b/project.html
@@ -73,6 +73,7 @@
             <p>Global Carbon Emissions over time</p>
         <div class="chart" id="chart1"></div>
         <div class="chart" id="chart2"></div>
+        <div class="chart" id="chart3"></div>
   
     </div> 
  
@@ -83,7 +84,7 @@
     //Define charts:
     var myChart1 = "choroplethfixlegend.json";
     var myChart2 = "cannualcarbonlinechart.json";
-    var myChart3 = "chart3_IMF.json";
+    var myChart3 = "deathchart.json";
     var myChart4 = "chart4_IMF2.json";
     var myChart5 = "chartweek3.json";
     var myChart6 = "GDP2.json";
