--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
     var myChart2 = "chart2_ukProductivity.json";
     var myChart3 = "chart3_IMF.json";
     var myChart4 = "chart4_IMF2.json";
-    var myChart5 = "chartweek3.json";
+    var myChart5 = "chart5_big4inline.json";
     var myChart6 = "GDP2.json";
     var myChart7 = "Transfers.json";
     var myChart8 = "BKST.json";
