--- a/project.html
+++ b/project.html
@@ -82,7 +82,7 @@
 
     //Define charts:
     var myChart31 = "choroplethfixlegend.json";
-    var myChart32 = "annualcarbonlinechart.json";
+    var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
     var myChart34 = "chart4_IMF2.json";
     var myChart35 = "chartweek3.json";
