--- a/portfolio.html
+++ b/portfolio.html
@@ -113,6 +113,7 @@
         <div class="chart" id="chart17"></div>
        <div class = 'grid_items'>
         <div class="grid_item" id="chart18"></div>
+        <div class="grid_item" id="chart22"></div>
         </div>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <p> hee are my mapsssss </p>
@@ -178,7 +179,7 @@
     var myChart19 = "week10needshelp.json";
     var myChart20 = "week8bneedshelp.json";
     var myChart21 = "FRANCECHNEEDSREGEX.json";
-    var myChart22 = "GTAO.json";
+    var myChart22 = "kepler.gl.html";
     var myChart23 = "MF6V.json";
     var myChart24 = "MM9F.json";
   
