--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
     var myChart20 = "week8bneedshelp.json";
     var myChart21 = "FRANCECHNEEDSREGEX.json";
     var myChart22 = "kepler.gl.html";
-    var myChart23 = "MF6V.json";
+    var myChart23 = "kepler.json";
     var myChart24 = "MM9F.json";
   
         
