--- a/portfolio.html
+++ b/portfolio.html
@@ -114,6 +114,7 @@
        <div class = 'grid_items'>
         <div class="grid_item" id="chart18"></div>
         <div class="grid_item" id="chart22"></div>
+        <div class="grid_item" id="chart23"></div>
         </div>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <p> hee are my mapsssss </p>
