--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
     var myChart17 = "visualization.vg.json";
     var myChart18 = "choroplethfixlegend.json";
     var myChart19 = "week10needshelp.json";
-    var myChart20 = "week8needtochangescale.json";
+    var myChart20 = "week8completed.json";
     var myChart21 = "FRANCECHNEEDSREGEX.json";
     var myChart22 = "kepler.gl.html";
     var myChart23 = "kepler.json";
