--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
     var myChart14 = "MM9F.json";
     var myChart15 = "NMBY.json";
     var myChart16 = "NZGF.json";
-    var myChart17 = "visualization.vg.json";
+    var myChart17 = "visualization.vg (1).json";
     var myChart18 = "choroplethfixlegend.json";
     var myChart19 = "week10needshelp.json";
     var myChart20 = "week8completed.json";
