--- a/project.html
+++ b/project.html
@@ -26,11 +26,11 @@
   <h2><b> Thea Gegeshidze </b> </h2>
 
   <p>
-    <a class="button" href="index.html"><style="font-size: 1em;"></i> Home</a>  
-    <a class="button" href="portfolio.html"><style="font-size: 1em;"></i> Portfolio</a> 
+    <a class="button" href="index.html" style="font-size: 1em;"></i> Home</a>  
+    <a class="button" href="portfolio.html" style="font-size: 1em;"></i> Portfolio</a> 
     <a class="buttonActive" href="project.html"> Project</a>
-    <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io"><style="font-size: 1em;"></i> Github</a> 
-    <a class="button" href="https://rapidcharts.io/datascience"><style="font-size: 1em;"></i> Course</a>
+    <a class="button" href="https://github.com/TheaGegeshidze/TheaGegeshidze.github.io" style="font-size: 1em;"></i> Github</a> 
+    <a class="button" href="https://rapidcharts.io/datascience" style="font-size: 1em;"></i> Course</a>
   </p>
 
 </container>
@@ -66,8 +66,7 @@
         
         <div class="chart" id="chart32"> </div>
         <div class="chart" id="chart33"> </div>
-   
- 
+
 
         <p> In order to explore the impact, another necessary graph is the C02 emissions globally.
         I chose to represent this using a choropleth. I used information from ourworldindata.org/co2emissions. 
@@ -88,19 +87,19 @@
     var myChart31 = "choroplethfixlegend.json";
     var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
-    var myChart34 = "chart4_IMF2.json";
-    var myChart35 = "chartweek3.json";
-    var myChart36 = "GDP2.json";
-    var myChart37 = "Transfers.json";
-    var myChart38 = "BKST.json";
-    var myChart39 = "data_ONS-CUDG.json";
-    var myChart40 = "data_ONS-CUKY.json";
-    var myChart41 = "data_ONS-EKED.json";
-    var myChart42 = "data_ONS-GTAO.json";
-    var myChart43 = "data_ONS-MF6V.json";
-    var myChart44 = "data_ONS-MM9F.json";
-    var myChart45 = "data_ONS-NMBY.json";
-    var myChart46 = "data_ONS-NZGF.json";
+    //var myChart34 = "chart4_IMF2.json";
+    //var myChart35 = "chartweek3.json";
+    //var myChart36 = "GDP2.json";
+    //var myChart37 = "Transfers.json";
+    //var myChart38 = "BKST.json";
+    //var myChart39 = "data_ONS-CUDG.json";
+    //var myChart40 = "data_ONS-CUKY.json";
+    //var myChart41 = "data_ONS-EKED.json";
+    //var myChart42 = "data_ONS-GTAO.json";
+    //var myChart43 = "data_ONS-MF6V.json";
+    //var myChart44 = "data_ONS-MM9F.json";
+    //var myChart45 = "data_ONS-NMBY.json";
+    //var myChart46 = "data_ONS-NZGF.json";
     
     // Embed charts:
     vegaEmbed('#chart31', myChart31);
