--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,7 @@
       <div class="myWeek7">
         <h3> Week 7 : Two maps: a base map and a choropleth </h3>
         <div class="chart" id="chart17"></div>
+        <iframe width=500 height=500 src="kepler.gl.html"></iframe>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
       </div>
 
@@ -125,10 +126,6 @@
 
       <div class="myWeek10">
         <h3> Week 10/11: Machine Learning </h3>
-        <!-- <div class="chart" id="chart22"></div> -->
-        <!-- <div class="chart" id="chart23"></div> -->
-        <iframe width=500 height=500 src="kepler.gl.html"></iframe>
-        <div class="chart" id="chart24"></div>
         <p> Here are my learning machines.</p>
         <p> they are very very advanced </p>
 
@@ -144,8 +141,8 @@
       var myChart3 = "chart3_IMF.json"
       var myChart4 = "chart4_IMF2.json"
       var myChart5 = "chart5big4inline.json"
-      var myChart6 = "GDP2.json"
-      var myChart7 = "Transfers.json"
+      //var myChart6 = "GDP2.json"
+      //var myChart7 = "Transfers.json"
       var myChart8 = "BKST.json"
       var myChart9 = "CUDG.json"
       var myChart10 = "CUKY.json"
@@ -156,13 +153,13 @@
       var myChart15 = "NMBY.json"
       var myChart16 = "NZGF.json"
       var myChart17 = "visualization.vg (1).json"
-      var myChart18 = "choroplethfixlegend.json"
-      var myChart19 = "week10needshelp.json"
+      //var myChart18 = "choroplethfixlegend.json"
+      //var myChart19 = "week10needshelp.json"
       var myChart20 = "week8completed.json"
       var myChart21 = "FRANCECHNEEDSREGEX.json"
       // var myChart22 = "kepler.gl.html"
       // var myChart23 = "kepler.json"
-      var myChart24 = "MM9F.json"
+      //var myChart24 = "MM9F.json"
 
 
       // Embed charts:
@@ -189,7 +186,7 @@
       vegaEmbed('#chart21', myChart21)
       // vegaEmbed('#chart22', myChart22)
       // vegaEmbed('#chart23', myChart23)
-      vegaEmbed('#chart24', myChart24)
+      // vegaEmbed('#chart24', myChart24)
 
     </script>
 
