--- a/project.html
+++ b/project.html
@@ -77,6 +77,7 @@
         in Asia, specifically China. Considering the changing economic climate, with much of production being outsourced to Asia, 
         this makes sense; and should inform where policy recommendations are concentrated.</p>
         
+      <div class="chart" id="chart34"> </div>
         </div>
         
 </body>
@@ -87,7 +88,7 @@
     var myChart31 = "choroplethfixlegend.json";
     var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
-    //var myChart34 = "chart4_IMF2.json";
+    var myChart34 = "lifecycleandcost.json";
     //var myChart35 = "chartweek3.json";
     //var myChart36 = "GDP2.json";
     //var myChart37 = "Transfers.json";
