--- a/project.html
+++ b/project.html
@@ -78,6 +78,7 @@
         this makes sense; and should inform where policy recommendations are concentrated.</p>
         
       <div class="chart" id="chart34"> </div>
+      <div class="chart" id="chart35"> </div>
         </div>
         
 </body>
@@ -89,7 +90,7 @@
     var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
     var myChart34 = "lifecycleandcost.json";
-    //var myChart35 = "chartweek3.json";
+    var myChart35 = "electricitymixpiechart.json";
     //var myChart36 = "GDP2.json";
     //var myChart37 = "Transfers.json";
     //var myChart38 = "BKST.json";
