--- a/portfolio.html
+++ b/portfolio.html
@@ -153,8 +153,8 @@
       var myChart15 = "NMBY.json"
       var myChart16 = "NZGF.json"
       var myChart17 = "visualization.vg (1).json"
-      //var myChart18 = "choroplethfixlegend.json"
-      //var myChart19 = "week10needshelp.json"
+      //var myChart18 = "PROJECTannualcarbonlinechart.json"
+      //var myChart19 = "choroplethfixlegend.json"
       var myChart20 = "week8completed.json"
       var myChart21 = "FRANCECHNEEDSREGEX.json"
       // var myChart22 = "kepler.gl.html"
