--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@
         <h3> Week 3: Inline Data Graphs</h3>
         <p>The growth rate of the big 4 countries (% annual)</p>
         <div class="chart" id="chart5"></div>
+        <div class="chart" id="chart6"></div>
       </div>
 
       <div class="myWeek4">
@@ -140,8 +141,8 @@
       var myChart2 = "chart2_ukProductivity.json"
       var myChart3 = "chart3_IMF.json"
       var myChart4 = "chart4_IMF2.json"
-      var myChart5 = "chart5big4inline.json"
-      //var myChart6 = "GDP2.json"
+      var myChart5 = "inlinebeforeitsfixed.json"
+      var myChart6 = "electricitymixpiechart.json"
       //var myChart7 = "Transfers.json"
       var myChart8 = "BKST.json"
       var myChart9 = "CUDG.json"
