--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 
       <div class="myWeek4">
         <h3> Week 4 </h3>
-
+        <div class="chart" id="chart7"></div>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
         <p> I chose this website because...</p>
 
@@ -143,7 +143,7 @@
       var myChart4 = "chart4_IMF2.json"
       var myChart5 = "inlinebeforeitsfixed.json"
       var myChart6 = "electricitymixpiechart.json"
-      //var myChart7 = "Transfers.json"
+      var myChart7 = "scrapedweek4.json"
       var myChart8 = "BKST.json"
       var myChart9 = "CUDG.json"
       var myChart10 = "CUKY.json"
