--- a/portfolio.html
+++ b/portfolio.html
@@ -169,8 +169,8 @@
       vegaEmbed('#chart3', myChart3)
       vegaEmbed('#chart4', myChart4)
       vegaEmbed('#chart5', myChart5)
-      // vegaEmbed('#chart6', myChart6)
-      // vegaEmbed('#chart7', myChart7)
+      vegaEmbed('#chart6', myChart6)
+      vegaEmbed('#chart7', myChart7)
       vegaEmbed('#chart8', myChart8)
       vegaEmbed('#chart9', myChart9)
       vegaEmbed('#chart10', myChart10)
