--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
       //var myChart18 = "PROJECTannualcarbonlinechart.json"
       //var myChart19 = "choroplethfixlegend.json"
       var myChart20 = "week8completed.json"
-      var myChart21 = "FRANCECHNEEDSREGEX.json"
+      var myChart21 = "w10trellis.json"
       // var myChart22 = "kepler.gl.html"
       // var myChart23 = "kepler.json"
       //var myChart24 = "MM9F.json"
