--- a/project.html
+++ b/project.html
@@ -88,12 +88,12 @@
 <script>
 
     //Define charts:
-    var myChart31 = "choroplethfixlegend.json";
-    var myChart32 = "PROJECTannualcarbonlinechart.json";
+    //var myChart31 = "choroplethfixlegend.json";
+    //var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
     var myChart34 = "lifecycleandcost.json";
     var myChart35 = "electricitymixpiechart.json";
-    var myChart36 = "francepieinline.json";
+    //var myChart36 = "francepieinline.json";
     //var myChart37 = "Transfers.json";
     //var myChart38 = "BKST.json";
     //var myChart39 = "data_ONS-CUDG.json";
