--- a/portfolio.html
+++ b/portfolio.html
@@ -153,7 +153,7 @@
       var myChart14 = "MM9F.json"
       var myChart15 = "NMBY.json"
       var myChart16 = "NZGF.json"
-      var myChart17 = "visualization.vg (1).json"
+      //var myChart17 = "visualization.vg (1).json"
       //var myChart18 = "PROJECTannualcarbonlinechart.json"
       //var myChart19 = "choroplethfixlegend.json"
       var myChart20 = "week8completed.json"
@@ -180,7 +180,7 @@
       vegaEmbed('#chart14', myChart14)
       vegaEmbed('#chart15', myChart15)
       vegaEmbed('#chart16', myChart16)
-      vegaEmbed('#chart17', myChart17)
+      //vegaEmbed('#chart17', myChart17)
       // vegaEmbed('#chart18', myChart18)
       // vegaEmbed('#chart19', myChart19)
       vegaEmbed('#chart20', myChart20)
