--- a/project.html
+++ b/project.html
@@ -186,10 +186,10 @@
 <script>
 
     //Define charts:
-    var myChart31 = "lifecyclefinished.json"
+    var myChart31 = "lifecyclefinished.json";
     //var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
-    var myChart34 = "lifecycleandcost.json";
+    //var myChart34 = "lifecycleandcost.json";
     var myChart35 = "electricitymixpiechart.json";
     //var myChart36 = "francepieinline.json";
     //var myChart37 = "Transfers.json";
